// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalDescription Should render an error 1`] = `
.c0 {
  margin: 1.5rem 0;
  line-height: 1.5;
  font-size: 16px;
  text-align: justify;
  color: #BDC0C7;
}

<div>
   
  <div
    class="c0"
  >
    errorMessage.proposalDescriptionError
  </div>
   
</div>
`;

exports[`ProposalDescription Should render loading if it has no metadata 1`] = `
.c0 {
  margin: 1.5rem 0;
  line-height: 1.5;
  font-size: 16px;
  text-align: justify;
  color: #BDC0C7;
}

<div>
   
  <div
    class="c0"
  >
    <div
      class=""
    >
      <span
        aria-busy="true"
        aria-live="polite"
      >
        <span
          class="react-loading-skeleton"
          style="width: 100%; --base-color: #333; --highlight-color: #555;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
   
</div>
`;

exports[`ProposalDescription Should render with description 1`] = `
.c0 {
  margin: 1.5rem 0;
  line-height: 1.5;
  font-size: 16px;
  text-align: justify;
  color: #BDC0C7;
}

<div>
   
  <div
    class="c0"
  >
    <span>
      This is the description of the proposal
    </span>
  </div>
   
</div>
`;
